--- a/www/resources/assets/sass/app.scss
+++ b/www/resources/assets/sass/app.scss
@@ -6,59 +6,7 @@
 
 @import 'variables';
 // bulma
-@import "node_modules/bulma/bulma";
-
-html,
-body,
-.full-height {
-  height: 100%;
-}
-
-.full-height {
-	display: flex;
-	overflow: hidden;
-	flex-direction: column;
-
-	> section {
-		flex: 0 0 auto;
-	}
-		
-	.top {
-		margin: 0;
-	}
-
-	.main {
-		flex: 1 1 auto;
-	    
-	    overflow: scroll;
-	    $gradient-top-left: darken(saturate(adjust-hue($primary, -10deg), 10%), 10%);
-    	$gradient-bottom-right: lighten(saturate(adjust-hue($primary, 10deg), 5%), 5%);
-    	background-image: linear-gradient(141deg, $gradient-top-left 0%, $primary 71%, $gradient-bottom-right 100%);
-
-	}
-}
-
-.has-margin-top {
-	margin-top: $size-4;
-}
-
-.has-vertical-padding {
-	padding: $size-4/2 0;
-}
-
-.textarea {
-	min-height: auto;
-}
-
-.meta {
-	color: $white;
-	padding: 0.5rem 1.5rem;
-
-	a {
-		color: $white-bis;
-	}
-}
-
+@import "node_modules/bootstrap/scss/bootstrap";
 
 .waiting {
 
@@ -70,8 +18,8 @@ body,
 		width: $dotSize;
 		height: $dotSize;
 		border-radius: $dotSize * 0.5;
-		border: 0px solid $primary;
-		background: $primary;
+		border: 0px solid $brand-primary;
+		background: $brand-primary;
 
 
 		&:nth-child(1) {
