--- a/www/resources/assets/sass/app.scss
+++ b/www/resources/assets/sass/app.scss
@@ -8,6 +8,26 @@
 // bulma
 @import "node_modules/bootstrap/scss/bootstrap";
 
+body {
+	background: #f5f5f5;
+}
+
+nav.navbar {
+	&.fixed-top {
+		background: #FFF;
+		border-bottom: 1px solid $card-border-color;
+	}
+
+	&.fixed-bottom {
+		background: #FFF;
+		border-top: 1px solid $card-border-color;
+	}
+}
+
+.main {
+	padding: 5rem 0;
+}
+
 .waiting {
 
 	display: block;
